# edcre

./: CMakeLists.txt  break.cpp  edcre.cpp  fc.cpp
ctest/: TSUGARU_OS.mdf  TSUGARU_OS.mds  break.cpp  intentionally_broken.mdf
